# TreeScopicAI

./: .cursorignore  .gitignore  CNAME  NAMECHEAP-DEPLOY.md  NEXT_STEPS.md  README-IMPORT-SPECIES.md  README-UI-UPDATES.md  README-WEB-SETUP.md  README.md  WINDOWS_DEFENDER_FIX.md  WINDOWS_DEFENDER_GUIDE.md  deploy-to-namecheap.sh  index.html  netlify.toml  package-lock.json  package.json  rebuild_database.py  tailwind.config.js  vite.config.js
.github/workflows/: deploy-to-namecheap.yml
assets/: index-1f597441.js  tauri-622faabd.js
backend/: init_db.cjs  schema.sql  species_data.json
backend/huggingface_api/: README.md  main.py  requirements.txt
species_data/: sample_keys.txt  species.db
src/: App.jsx  api-client.js  main.jsx  proxy.js
src-tauri/: Add_Windows_Defender_Exclusion.bat  Cargo.toml  windows-defender-fix.ps1
src-tauri/icons/: icon.icns
src-tauri/resources/: species.db  species_data.json
src-tauri/src/: activation.rs  database.rs  import_species.rs  lib.rs  main.rs
src-tauri/src/resources/: species.db  species_data.json
src/components/: ActivationScreen.jsx  ApiErrorNotification.jsx  BackButton.jsx  Dashboard.jsx  ErrorBoundary.jsx  ImagePreviewWrapper.jsx  ImageUploader.jsx  MeasurementTool.jsx  MenuButton.jsx  PersistentAnalysisResult.jsx  SideDrawer.jsx  SpeciesCard.jsx  Tooltip.jsx
src/data/: speciesData.js
src/pages/: Contact.jsx  HelpSupport.jsx  SpeciesIndex.jsx
src/store/: analysisStore.js
src/styles/: ActivationScreen.css  ApiErrorNotification.css  App.css  Dashboard.css  ImageUploader.css  MeasurementTool.css  index.css  (+4 more)
